--- a/FormattedCurrencyInput/en.lproj/MainStoryboard.storyboard
+++ b/FormattedCurrencyInput/en.lproj/MainStoryboard.storyboard
@@ -1,52 +1,72 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
-        <development version="4600" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CvZ-DG-bNk"/>
+                        <viewControllerLayoutGuide type="bottom" id="fII-PJ-2Hf"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eIF-en-8Z3">
+                                <rect key="frame" x="60" y="20" width="200" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="fXq-cL-NRx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2" id="tr7-fP-ZcQ"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxs-RT-6ar">
+                                <rect key="frame" x="123" y="114" width="73" height="30"/>
+                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="73" id="pTK-FJ-i1W"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Value?">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="valueButton:" destination="2" eventType="touchUpInside" id="csk-e8-MjS"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Sn-Jx-Bgj">
+                                <rect key="frame" x="60" y="67" width="200" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2" id="pRt-wF-Byj"/>
+                                </connections>
+                            </textField>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lxs-RT-6ar" firstAttribute="top" secondItem="eIF-en-8Z3" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="7n4-DU-H2T"/>
-                            <constraint firstItem="lxs-RT-6ar" firstAttribute="centerX" secondItem="eIF-en-8Z3" secondAttribute="centerX" type="default" id="B5u-55-Z6j"/>
-                            <constraint firstItem="eIF-en-8Z3" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="eoh-K6-PYD"/>
-                            <constraint firstItem="eIF-en-8Z3" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="yeZ-rS-ve0"/>
+                            <constraint firstItem="lxs-RT-6ar" firstAttribute="centerX" secondItem="eIF-en-8Z3" secondAttribute="centerX" id="B5u-55-Z6j"/>
+                            <constraint firstItem="lxs-RT-6ar" firstAttribute="top" secondItem="6Sn-Jx-Bgj" secondAttribute="bottom" constant="17" id="Sum-3G-H8L"/>
+                            <constraint firstItem="6Sn-Jx-Bgj" firstAttribute="top" secondItem="eIF-en-8Z3" secondAttribute="bottom" constant="17" id="WCJ-jy-A9E"/>
+                            <constraint firstItem="6Sn-Jx-Bgj" firstAttribute="centerX" secondItem="eIF-en-8Z3" secondAttribute="centerX" id="bp4-gV-STN"/>
+                            <constraint firstItem="eIF-en-8Z3" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" id="eoh-K6-PYD"/>
+                            <constraint firstItem="6Sn-Jx-Bgj" firstAttribute="width" secondItem="eIF-en-8Z3" secondAttribute="width" id="nWw-zV-wkZ"/>
+                            <constraint firstItem="eIF-en-8Z3" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" id="yeZ-rS-ve0"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="suffixField" destination="6Sn-Jx-Bgj" id="u69-yP-Yv2"/>
                         <outlet property="textField" destination="eIF-en-8Z3" id="dKj-zU-SfN"/>
                     </connections>
                 </viewController>
@@ -55,21 +75,4 @@
             <point key="canvasLocation" x="88" y="11"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="valueButton:"/>
-                <relationship kind="outlet" name="textField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
